@@ -1,6 +1,6 @@
 Package: diffHic
-Version: 1.1.12
-Date: 2015/07/28
+Version: 1.1.14
+Date: 2015/08/18
 Title: Differential analyis of Hi-C data
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
